log
Thu 05 Oct 2023 04:04:52 PM UTC: 
 tests:  0|5
total_score: 0/70
5155c4b
Thu 05 Oct 2023 04:10:37 PM UTC: 
 sudoku.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:12: error: expected ‘)’ before ‘->’ token
   59 |       int(n->sido[fila][columna] == 0){
      |            ^~
      |            )
sudoku.c:55:7: error: unused variable ‘columnaVacia’ [-Werror=unused-variable]
   55 |   int columnaVacia = -1;
      |       ^~~~~~~~~~~~
sudoku.c:54:7: error: unused variable ‘filaVacia’ [-Werror=unused-variable]
   54 |   int filaVacia = -1;
      |       ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3fc7c77
Thu 05 Oct 2023 04:10:57 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:12: error: expected ‘)’ before ‘->’ token
   59 |       int(n->sudo[fila][columna] == 0){
      |            ^~
      |            )
sudoku.c:55:7: error: unused variable ‘columnaVacia’ [-Werror=unused-variable]
   55 |   int columnaVacia = -1;
      |       ^~~~~~~~~~~~
sudoku.c:54:7: error: unused variable ‘filaVacia’ [-Werror=unused-variable]
   54 |   int filaVacia = -1;
      |       ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8e70c89
Thu 05 Oct 2023 04:14:02 PM UTC: 
 sudoku.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:12: error: expected ‘)’ before ‘->’ token
   59 |       int(n->sudo[fila][columna] == 0){
      |            ^~
      |            )
sudoku.c:67:45: error: expected ‘)’ before ‘{’ token
   67 |     if(filaVacia != -1 && columnaVacia != -1{
      |       ~                                     ^
      |                                             )
sudoku.c:74:3: error: expected expression before ‘}’ token
   74 |   }
      |   ^
Compilation failed
6cae9f2
Thu 05 Oct 2023 04:14:19 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:12: error: expected ‘)’ before ‘->’ token
   59 |       int(n->sudo[fila][columna] == 0){
      |            ^~
      |            )
sudoku.c:67:45: error: expected ‘)’ before ‘{’ token
   67 |     if(filaVacia != -1 && columnaVacia != -1{
      |       ~                                     ^
      |                                             )
sudoku.c:76:1: error: expected expression before ‘}’ token
   76 | }
      | ^
sudoku.c:53:9: error: unused variable ‘list’ [-Werror=unused-variable]
   53 |   List* list=createList();
      |         ^~~~
sudoku.c:76:1: error: control reaches end of non-void function [-Werror=return-type]
   76 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
60108af
Thu 05 Oct 2023 04:14:33 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:12: error: expected ‘)’ before ‘->’ token
   59 |       int(n->sudo[fila][columna] == 0){
      |            ^~
      |            )
Compilation failed
2819d9c
Thu 05 Oct 2023 04:15:10 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
ab9e24d
Thu 05 Oct 2023 04:22:22 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:54: error: unused variable ‘subMatrizAux’ [-Werror=unused-variable]
   48 |   int filaAux[9][10] = {0}, columnaAux[9][10] = {0}, subMatrizAux[9][10] = {0};
      |                                                      ^~~~~~~~~~~~
sudoku.c:48:29: error: unused variable ‘columnaAux’ [-Werror=unused-variable]
   48 |   int filaAux[9][10] = {0}, columnaAux[9][10] = {0}, subMatrizAux[9][10] = {0};
      |                             ^~~~~~~~~~
sudoku.c:48:7: error: unused variable ‘filaAux’ [-Werror=unused-variable]
   48 |   int filaAux[9][10] = {0}, columnaAux[9][10] = {0}, subMatrizAux[9][10] = {0};
      |       ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cdf7a2b
Thu 05 Oct 2023 04:23:51 PM UTC: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:51:5: error: implicit declaration of function ‘dor’ [-Werror=implicit-function-declaration]
   51 |     dor(int columna = 0; columna < 9 ; columna ++){
      |     ^~~
sudoku.c:51:9: error: expected expression before ‘int’
   51 |     dor(int columna = 0; columna < 9 ; columna ++){
      |         ^~~
sudoku.c:51:51: error: expected ‘;’ before ‘{’ token
   51 |     dor(int columna = 0; columna < 9 ; columna ++){
      |                                                   ^
      |                                                   ;
sudoku.c:48:54: error: unused variable ‘subMatrizAux’ [-Werror=unused-variable]
   48 |   int filaAux[9][10] = {0}, columnaAux[9][10] = {0}, subMatrizAux[9][10] = {0};
      |                                                      ^~~~~~~~~~~~
sudoku.c:48:29: error: unused variable ‘columnaAux’ [-Werror=unused-variable]
   48 |   int filaAux[9][10] = {0}, columnaAux[9][10] = {0}, subMatrizAux[9][10] = {0};
      |                             ^~~~~~~~~~
sudoku.c:48:7: error: unused variable ‘filaAux’ [-Werror=unused-variable]
   48 |   int filaAux[9][10] = {0}, columnaAux[9][10] = {0}, subMatrizAux[9][10] = {0};
      |       ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
03f6673
Thu 05 Oct 2023 05:44:31 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:52:17: error: ‘sudo’ undeclared (first use in this function)
   52 |       int num = sudo->[fila][columna];
      |                 ^~~~
sudoku.c:52:17: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:52:23: error: expected identifier before ‘[’ token
   52 |       int num = sudo->[fila][columna];
      |                       ^
sudoku.c:53:10: error: the address of ‘filaAux’ will always evaluate as ‘true’ [-Werror=address]
   53 |       if(filaAux)
      |          ^~~~~~~
sudoku.c:54:5: error: expected expression before ‘}’ token
   54 |     }
      |     ^
sudoku.c:52:11: error: unused variable ‘num’ [-Werror=unused-variable]
   52 |       int num = sudo->[fila][columna];
      |           ^~~
sudoku.c:48:54: error: unused variable ‘subMatrizAux’ [-Werror=unused-variable]
   48 |   int filaAux[9][10] = {0}, columnaAux[9][10] = {0}, subMatrizAux[9][10] = {0};
      |                                                      ^~~~~~~~~~~~
sudoku.c:48:29: error: unused variable ‘columnaAux’ [-Werror=unused-variable]
   48 |   int filaAux[9][10] = {0}, columnaAux[9][10] = {0}, subMatrizAux[9][10] = {0};
      |                             ^~~~~~~~~~
sudoku.c:48:7: error: variable ‘filaAux’ set but not used [-Werror=unused-but-set-variable]
   48 |   int filaAux[9][10] = {0}, columnaAux[9][10] = {0}, subMatrizAux[9][10] = {0};
      |       ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ef0542b
Thu 05 Oct 2023 05:44:59 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:54:5: error: expected expression before ‘}’ token
   54 |     }
      |     ^
sudoku.c:52:11: error: unused variable ‘num’ [-Werror=unused-variable]
   52 |       int num = n->sudo[fila][columna];
      |           ^~~
sudoku.c:48:54: error: unused variable ‘subMatrizAux’ [-Werror=unused-variable]
   48 |   int filaAux[9][10] = {0}, columnaAux[9][10] = {0}, subMatrizAux[9][10] = {0};
      |                                                      ^~~~~~~~~~~~
sudoku.c:48:29: error: unused variable ‘columnaAux’ [-Werror=unused-variable]
   48 |   int filaAux[9][10] = {0}, columnaAux[9][10] = {0}, subMatrizAux[9][10] = {0};
      |                             ^~~~~~~~~~
sudoku.c:48:7: error: unused variable ‘filaAux’ [-Werror=unused-variable]
   48 |   int filaAux[9][10] = {0}, columnaAux[9][10] = {0}, subMatrizAux[9][10] = {0};
      |       ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5969a36
Thu 05 Oct 2023 05:48:33 PM UTC: 
 sudoku.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
d57e91b
